--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
                 <input type="password" class="form-control" id="pwdHash" placeholder="Password" th:field="*{pwdHash}">
                 <label for="pwdHash">Password</label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <button class="w-100 btn btn-primary" type="submit">Sign in</button>
             <p class="mt-2 text-muted">Don't have an account? <a th:href="@{signup}">Sign Up</a></p>
         </form>
     </main>
