--- a/src/main/resources/templates/tasks/default.html
+++ b/src/main/resources/templates/tasks/default.html
@@ -1,7 +1,7 @@
 <th:block th:replace="fragments :: header"></th:block>
 <th:block th:insert="fragments::navbar"></th:block>
 
-<main class="app-container">
+<main class="app-container narrow">
     <h1 class="display-1 text-center"><th:block th:insert="fragments :: brandLogo"></th:block></h1>
     <h1 class="h1 my-3 fw-bold text-center" th:insert="fragments :: appName"></h1>
     <div class="card my-2 shadow-lg">
