--- a/src/main/resources/templates/tasks/create.html
+++ b/src/main/resources/templates/tasks/create.html
@@ -27,7 +27,7 @@
                     <div class="col">
                         <div class="form-floating mb-2">
                             <input type="number" class="form-control" id="time" placeholder="Time Required (Optional)" th:field="${task.timeRequired}">
-                            <label for="time">Time Required (Optional)</label>
+                            <label for="time">Time Required (Optional) <i class="bi bi-123"></i></label>
                         </div>
                     </div>
                     <div class="col">
@@ -58,7 +58,7 @@
                     </th:block>
                 </div>
 
-                <button class="w-100 btn btn-lg btn-primary" type="submit" th:text="${btnName}"></button>
+                <button class="w-100 btn btn-primary" type="submit" th:text="${btnName}"></button>
             </form>
         </div>
     </div>
