--- a/src/main/resources/templates/tasks/index.html
+++ b/src/main/resources/templates/tasks/index.html
@@ -1,46 +1,83 @@
 <th:block th:replace="fragments :: header"></th:block>
 <th:block th:insert="fragments::navbar"></th:block>
 
-<main class="app-container">
-    <h1 class="display-1 text-center"><th:block th:insert="fragments :: brandLogo"></th:block></h1>
+<main class="container">
+    <h1 class="display-1 mt-3 text-center"><th:block th:insert="fragments :: brandLogo"></th:block></h1>
     <h1 class="h1 my-3 fw-bold text-center" th:insert="fragments :: appName"></h1>
-    <div class="card my-2 shadow-lg">
-        <h2 class="h3 card-header fw-bold text-center" th:text="${title}"></h2>
-        <div class="card-body table-responsive">
-            <a class="w-100 btn btn-primary mb-2" th:href="@{/tasks/create}"><i class="bi bi-plus-circle"></i> Create a New Task</a>
-            <table class="table align-middle">
-                <caption>List of tasks</caption>
-                <thead>
-                <tr>
-                    <th scope="col">Task</th>
-                    <th scope="col">Task List</th>
-                    <th scope="col">Due Date</th>
-                    <th scope="col">Priority</th>
-                    <th scope="col">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="task : ${tasks}">
-                    <td scope="row">
-                        <a th:href="|/tasks/${task.id}|" th:title="${task.isComplete} ? 'Mark as Not Completed' : 'Mark as Completed'"><i th:class="${task.isComplete} ? 'bi bi-check-circle-fill text-success' : 'bi bi-check-circle-fill text-secondary'"></i></a>
-                        <span th:replace="fragments :: displayTask"></span>
-                        (<span th:replace="fragments :: displayRequiredTime"></span> minutes)
-                    </td>
-                    <td th:text="${task.getTasklists().size() > 0} ? ${task.getTasklists().get(0).name} : 'None'"></td>
-                    <td><span th:replace="fragments :: displayDueDate"></span></td>
-                    <td><span th:replace="fragments :: displayPriority"></td>
-                    <td>
-                        <a th:href="${'/tasks/'+ task.id + '/edit'}" class="btn btn-sm btn-success d-block w-100 mb-1"><i class="bi bi-pencil"></i> Edit</a>
-                        <form method="post" action="/tasks/delete">
-                            <input type="hidden" name="id" th:value="${task.id}">
-                            <button class="btn btn-danger btn-sm d-block w-100"><i class="bi bi-trash"></i> Delete</button>
-                        </form>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+    <h1 class="h1 my-3 fw-bold text-center" th:text="${title}"></h1>
+
+    <div class="text-center">
+        <a class="btn btn-primary mb-2" th:href="@{/tasks/create}"><i class="bi bi-plus-circle"></i> Create a New Task</a>
+    </div>
+
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-2 mb-4">
+        <div class="col" th:each="task : ${tasks}">
+            <div th:class="'card h-100 shadow-sm' + (${task.isComplete} ? ' bg-success bg-opacity-10')">
+                <div class="card-body">
+                    <h5 class="card-title"><a th:href="|/tasks/${task.id}|" th:title="${task.isComplete} ? 'Mark as Not Completed' : 'Mark as Completed'"><i th:class="${task.isComplete} ? 'bi bi-check-circle-fill text-success' : 'bi bi-check-circle-fill text-secondary'"></i></a> <span th:replace="fragments :: displayTask"></span></h5>
+                    <th:block th:insert="fragments :: displayTaskPropertiesForGenerator"></th:block>
+                </div>
+                <div class="card-footer">
+                    <div class="row row-cols-1 row-cols-md-3">
+                        <div class="col">
+                            <a th:href="|/tasks/${task.id}|" th:title="${task.isComplete} ? 'Mark as Not Completed' : 'Mark as Completed'" th:class="'btn btn-sm d-block w-100 mb-1' + (${task.isComplete} ? ' btn-success' : ' btn-primary')"><i class="bi bi-check-circle-fill d-md-block"></i> <span th:text="${task.isComplete} ? 'Uncheck' : 'Check'"></span></a>
+                        </div>
+                        <div class="col">
+                            <a th:href="${'/tasks/'+ task.id + '/edit'}" class="btn btn-sm btn-warning d-block w-100 mb-1"><i class="bi bi-pencil d-md-block"></i> Edit</a>
+                        </div>
+                        <div class="col">
+                            <form method="post" action="/tasks/delete">
+                                <input type="hidden" name="id" th:value="${task.id}">
+                                <button class="btn btn-danger btn-sm d-block w-100" th:disabled="${task.getTasklists().size() > 0}"><i class="bi bi-trash d-md-block"></i> Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </main>
+
+<!--<main class="app-container">-->
+<!--    <h1 class="display-1 text-center"><th:block th:insert="fragments :: brandLogo"></th:block></h1>-->
+<!--    <h1 class="h1 my-3 fw-bold text-center" th:insert="fragments :: appName"></h1>-->
+<!--    <div class="card my-2 shadow-lg">-->
+<!--        <h2 class="h3 card-header fw-bold text-center" th:text="${title}"></h2>-->
+<!--        <div class="card-body table-responsive">-->
+<!--            <a class="w-100 btn btn-primary mb-2" th:href="@{/tasks/create}"><i class="bi bi-plus-circle"></i> Create a New Task</a>-->
+<!--            <table class="table align-middle">-->
+<!--                <caption>List of tasks</caption>-->
+<!--                <thead>-->
+<!--                <tr>-->
+<!--                    <th scope="col">Task</th>-->
+<!--                    <th scope="col">Task List</th>-->
+<!--                    <th scope="col">Due Date</th>-->
+<!--                    <th scope="col">Priority</th>-->
+<!--                    <th scope="col">Actions</th>-->
+<!--                </tr>-->
+<!--                </thead>-->
+<!--                <tbody>-->
+<!--                <tr th:each="task : ${tasks}">-->
+<!--                    <td scope="row">-->
+<!--                        <a th:href="|/tasks/${task.id}|" th:title="${task.isComplete} ? 'Mark as Not Completed' : 'Mark as Completed'"><i th:class="${task.isComplete} ? 'bi bi-check-circle-fill text-success' : 'bi bi-check-circle-fill text-secondary'"></i></a>-->
+<!--                        <span th:replace="fragments :: displayTask"></span>-->
+<!--                        (<span th:replace="fragments :: displayRequiredTime"></span> minutes)-->
+<!--                    </td>-->
+<!--                    <td th:text="${task.getTasklists().size() > 0} ? ${task.getTasklists().get(0).name} : 'None'"></td>-->
+<!--                    <td><span th:replace="fragments :: displayDueDate"></span></td>-->
+<!--                    <td><span th:replace="fragments :: displayPriority"></td>-->
+<!--                    <td>-->
+<!--                        <a th:href="${'/tasks/'+ task.id + '/edit'}" class="btn btn-sm btn-success d-block w-100 mb-1"><i class="bi bi-pencil"></i> Edit</a>-->
+<!--                        <form method="post" action="/tasks/delete">-->
+<!--                            <input type="hidden" name="id" th:value="${task.id}">-->
+<!--                            <button class="btn btn-danger btn-sm d-block w-100"><i class="bi bi-trash"></i> Delete</button>-->
+<!--                        </form>-->
+<!--                    </td>-->
+<!--                </tr>-->
+<!--                </tbody>-->
+<!--            </table>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</main>-->
 
 <th:block th:replace="fragments :: footer"></th:block>
