--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -1,72 +1,40 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
+<th:block th:replace="fragments :: header"></th:block>
+<th:block th:insert="fragments::navbar"></th:block>
 
-<body>
-<nav th:replace="fragments::navbar"></nav>
-
-<section class="logged-in-section" style="height: 93vh">
-    <div class="container py-5 h-100">
-        <div class="row  justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card list-card text-white shadow-lg" style="border-radius: 1rem;">
-                    <h1 class="text-black p-4" th:text="${title}"></h1>
-                    <div class="card-body col-10 col-md-7 col-lg-9 col-xl-9  p-2 text-center">
-                        <div class=" mb-md-2 mt-3 ">
-                            <form class="text-black" method="post">
-                                <div class="form-outline form-black  mb-0">
-                                    <input type="text" id="tagName" class="form-control form-control-lg "
-                                           th:field="${tag.name}">
-                                    <label class="form-label" for="tagName">Tag Name:</label>
-                                    <div class="form-notch">
-                                        <div class="form-notch-leading" style="width: 9px;"></div>
-                                        <div class="form-notch-middle" style="width: 65px;"></div>
-                                        <div class="form-notch-trailing"></div>
-                                    </div>
-                                </div>
-
-                                <div class="form-outline mb-0 mt-2">
-                                    <span th:errors="${tag.name}"
-                                          class="error_span text-danger justify-content-end "></span>
-                                </div>
-                                <button class="btn btn-outline-dark mt-4 btn-sm px-5">Add</button>
-                            </form>
-                            <p th:if="${#lists.isEmpty(tags)}" class="text-black">No tags added yet. Add a tag from the form above.</p>
-                            <div th:unless="${#lists.isEmpty(tags)}">
-                                <h3 class="text-black p-4">Tags:</h3>
-                                <th:block th:each="tag : ${tags}">
-                                    <button type="button" class="btn btn-primary mb-2" th:text="${tag.name}"></button>
-                                </th:block>
-                            </div>
-                        </div>
+<main class="app-container narrow">
+    <h1 class="display-1 text-center"><th:block th:insert="fragments :: brandLogo"></th:block></h1>
+    <h1 class="h1 my-3 fw-bold text-center" th:insert="fragments :: appName"></h1>
+    <div class="card my-2 shadow-lg">
+        <h2 class="h3 card-header fw-bold text-center" th:text="${title}"></h2>
+        <div class="card-body">
+            <form method="post" th:object="${tag}">
+                <div th:if="${#fields.hasAnyErrors()}" class="card my-2">
+                    <div class="card-body text-start text-danger">
+                        <ul class="list-unstyled m-0">
+                            <li th:each="err : ${#fields.allErrors()}" class="text-start text-danger small">
+                                <i class="bi bi-exclamation-circle-fill"></i>
+                                <span th:text="${err}"></span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
+
+                <div class="form-floating mb-2">
+                    <input type="text" class="form-control" id="name" placeholder="Tag Name" th:field="*{name}" required>
+                    <label for="name">Tag Name</label>
+                </div>
+
+                <button class="w-100 btn btn-primary" type="submit">Add</button>
+            </form>
+            <h4 class="text-center my-5" th:if="${#lists.isEmpty(tags)}">No tags yet.</h4>
+            <div class="mt-4" th:unless="${#lists.isEmpty(tags)}">
+                <h2 class="h3 card-title">Tags:</h2>
+                <th:block th:each="tag : ${tags}">
+                    <button type="button" class="btn btn-primary mb-2" th:text="${tag.name}"></button>
+                </th:block>
             </div>
         </div>
     </div>
+</main>
 
-    <script>
-        const inputs = document.querySelectorAll("input");
-
-
-
-        inputs.forEach(e => {
-            if (e.value) {
-                e.classList.add('active');
-            }
-        });
-
-        inputs.forEach(el => {
-            el.addEventListener('blur', e => {
-                if (e.target.value) {
-                    e.target.classList.add('active');
-                } else {
-                    e.target.classList.remove('active')
-                }
-            })
-        });
-    </script>
-</section>
-
-</body>
-</html>
+<th:block th:replace="fragments :: footer"></th:block>
