--- a/src/main/resources/templates/tasklist/index.html
+++ b/src/main/resources/templates/tasklist/index.html
@@ -23,6 +23,12 @@
                         </li>
                     </ul>
                 </div>
+                <div class="card-footer">
+                    <form method="post" action="/tasklist/delete">
+                        <input type="hidden" name="id" th:value="${tasklist.id}">
+                        <button class="btn btn-danger btn-sm d-block w-100"><i class="bi bi-trash d-md-block"></i> Delete</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
