--- a/src/main/resources/templates/tasks/index.html
+++ b/src/main/resources/templates/tasks/index.html
@@ -28,7 +28,7 @@
                         <div class="col">
                             <form method="post" action="/tasks/delete">
                                 <input type="hidden" name="id" th:value="${task.id}">
-                                <button class="btn btn-danger btn-sm d-block w-100" th:disabled="${task.getTasklists().size() > 0}"><i class="bi bi-trash d-md-block"></i> Delete</button>
+                                <button class="btn btn-danger btn-sm d-block w-100"><i class="bi bi-trash d-md-block"></i> Delete</button>
                             </form>
                         </div>
                     </div>
