Added a link to the forgot page.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,6 +24,7 @@
             </div>
             <button class="w-100 btn btn-primary" type="submit">Sign in</button>
             <p class="mt-2 text-muted">Don't have an account? <a th:href="@{signup}">Sign Up</a></p>
+            <p class="mt-2 text-muted"><a th:href="@{forgot}">Forgot Password</a></p>
         </form>
     </main>
 </div>
